tests/errors/semantics/invalid_accessee_type.odl
main :: () -> void  {
    x := 5;
    x[4];
};